Major content update: Reposition from AI-centric to Order Builder
A. Hero title → "Rebuilding Order in an Age of Intelligence"
B. Manifesto aligned with new positioning, keeping 道成肉身
C. Remove NT$5 pricing from debate engine project
D. Remove SDTI from About timeline → 台日跨域合作與產業橋接
E. Remove 半導體 tag → cross-domain tags
F. Fix all 6 broken social links (Threads/YT/FB/IG/Bluesky/Reddit)
G. i18n sync for zh-CN, EN, JA
H. Fix contact form with mailto fallback

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Paul Kuo — paulkuo.tw</title>
+<title>Paul Kuo — Rebuilding Order in an Age of Intelligence</title>
 <meta name="description" content="Paul Kuo 郭曜郎 — 在技術與文明的交匯處，重建秩序、再生系統、守護人性尊嚴。">
-<meta property="og:title" content="Paul Kuo — Building the Order That Holds">
+<meta property="og:title" content="Paul Kuo — Rebuilding Order in an Age of Intelligence">
 <meta property="og:description" content="在技術與文明的交匯處，重建秩序、再生系統、守護人性尊嚴。">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://paulkuo.tw">
@@ -657,16 +657,16 @@ footer {
 <!-- ==================== HOME ==================== -->
 <div class="page-section active" id="page-home">
 
-  <!-- HERO -->
+  <!-- HERO — [A] 主標全面替換 -->
   <section class="hero">
     <div class="hero-inner">
       <div class="hero-text">
-        <h1 class="animate-in">Making <em>AI</em><br>Work for the<br>Real World</h1>
+        <h1 class="animate-in">Rebuilding <em>Order</em><br>in an Age of<br>Intelligence</h1>
         <p class="hero-tagline animate-in delay-1">
-          二十年的創業與跨域實踐，從神學訓練到人工智慧，我始終圍繞同一個核心問題——在技術與社會快速演進的時代，如何重塑秩序，並守住人的價值與尊嚴。
+          從神學訓練到循環經濟，從創業現場到人工智慧——二十年來，我始終在處理同一個問題：當既有的秩序不再有效，什麼樣的結構值得被重建？
         </p>
         <p class="hero-tagline animate-in delay-2" style="margin-top:-20px;">
-          在循環經濟的探索中，我重新思考資源與價值的關係；在智能工具的建構中，我更關心如何讓人回到創造、判斷與承擔這些無法被替代的角色。
+          技術是手段，不是目的。再生是方法，不是口號。真正的問題永遠是：在系統重組的過程中，人的判斷力、創造力與尊嚴，如何不被效率的邏輯吞噬。
         </p>
         <div class="hero-pillars animate-in delay-3">
           <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-ai)"></span>智能與秩序</span>
@@ -676,8 +676,8 @@ footer {
           <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-life)"></span>沉思與記錄</span>
         </div>
         <div class="hero-actions animate-in delay-4">
-          <a href="#" class="btn-primary" onclick="showPage('blog')">閱讀文章</a>
-          <a href="#contact" class="btn-secondary" onclick="showPage('home');setTimeout(()=>document.getElementById('contact').scrollIntoView({behavior:'smooth'}),100)">商業合作</a>
+          <a href="#" class="btn-primary" onclick="showPage('blog')">閱讀思想</a>
+          <a href="#" class="btn-secondary" onclick="showPage('about')">認識 Paul</a>
         </div>
       </div>
       <div class="hero-visual animate-in delay-2">
@@ -708,19 +708,19 @@ footer {
     </div>
   </section>
 
-  <!-- MANIFESTO: 道成肉身 -->
+  <!-- MANIFESTO — [B] 引句一致化，保留道成肉身但轉向秩序/入世 -->
   <section class="manifesto">
     <div class="manifesto-inner">
       <div class="manifesto-kicker">Philosophy · 哲學宣言</div>
       <p class="manifesto-quote">
-        "Making <em>AI</em> Work for the Real World"<br>
+        "Rebuilding <em>Order</em> in an Age of Intelligence"<br>
         — 道成肉身
       </p>
       <p class="manifesto-body">
         神學說，抽象的道（Logos）必須成為肉身（Sarx），才能真正與世界相遇。
-        AI 也是如此——離開了物理世界的真實問題，再精密的模型也只是漂浮在雲端的神諭。
+        秩序也是如此——停留在概念中的秩序只是論述，唯有進入真實的產業、制度與人際關係，秩序才能被重建。
         我相信技術必須落地、智能必須入世、創業必須承擔真實的風險與限制。
-        這不是技術樂觀主義，是一個神學訓練出身的創業者，對「道成肉身」最務實的理解。
+        這不是技術樂觀主義，是一個神學訓練出身的創業者，對「道成肉身」最務實的理解——讓秩序在混亂中重新站立，讓人的尊嚴在效率的洪流中被守住。
       </p>
       <a href="#" class="manifesto-cta" onclick="showPage('blog')">閱讀完整論述 →</a>
     </div>
@@ -769,7 +769,7 @@ footer {
     </div>
   </section>
 
-  <!-- PROJECTS PREVIEW -->
+  <!-- PROJECTS PREVIEW — [C] NT$5 removed -->
   <section style="background:var(--bg-section)">
     <div class="section-container">
       <div class="section-header">
@@ -790,18 +790,18 @@ footer {
         <div class="project-card debate">
           <div class="project-icon" style="background:rgba(37,99,235,0.1)">🧠</div>
           <h3>多模型認知協作框架</h3>
-          <p>讓 GPT-5.2、Gemini、Grok-4 三個 AI 互相辯論，Perplexity 事實查核。每輪 NT$5 換多角度洞見。</p>
+          <p>讓多個語言模型對同一議題進行結構化辯論與交叉驗證，以事實查核建立更可靠的判斷支撐。單一模型給觀點，多模型碰撞才接近判斷。</p>
           <div class="project-tags">
             <span class="project-tag">Multi-Agent</span>
             <span class="project-tag">Python</span>
-            <span class="project-tag">Open Source</span>
+            <span class="project-tag">認知基礎設施</span>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- CONTACT -->
+  <!-- CONTACT — [F] Social links fixed -->
   <section class="contact-section" id="contact">
     <div class="section-container">
       <div class="contact-grid">
@@ -812,30 +812,32 @@ footer {
             或只是想聊聊 — 歡迎來信。
           </p>
           <div class="social-links">
-            <a href="https://twitter.com/zarqarwi" class="social-link" target="_blank">𝕏 Twitter</a>
+            <a href="https://x.com/paulkuo" class="social-link" target="_blank">𝕏 Twitter</a>
             <a href="https://www.linkedin.com/in/paulkuo" class="social-link" target="_blank">in LinkedIn</a>
-            <a href="#" class="social-link">◉ Threads</a>
-            <a href="#" class="social-link">▶ YouTube</a>
-            <a href="#" class="social-link">📘 Facebook</a>
-            <a href="#" class="social-link">📷 Instagram</a>
-            <a href="#" class="social-link">🦋 Bluesky</a>
-            <a href="#" class="social-link">🔴 Reddit</a>
+            <a href="https://www.threads.net/@zarqarwi" class="social-link" target="_blank">◉ Threads</a>
+            <a href="https://www.youtube.com/@KuoPaul" class="social-link" target="_blank">▶ YouTube</a>
+            <a href="https://www.facebook.com/zarqarwi" class="social-link" target="_blank">📘 Facebook</a>
+            <a href="https://www.instagram.com/zarqarwi" class="social-link" target="_blank">📷 Instagram</a>
+            <a href="https://bsky.app/profile/paulkuo.bsky.social" class="social-link" target="_blank">🦋 Bluesky</a>
+            <a href="https://www.reddit.com/user/Constant-Variety1656" class="social-link" target="_blank">🔴 Reddit</a>
           </div>
         </div>
         <div class="contact-form">
+          <form action="mailto:paul@lasaas.com" method="post" enctype="text/plain">
           <div class="form-group">
             <label>姓名</label>
-            <input type="text" placeholder="你的名字">
+            <input type="text" name="name" placeholder="你的名字" required>
           </div>
           <div class="form-group">
             <label>Email</label>
-            <input type="email" placeholder="you@example.com">
+            <input type="email" name="email" placeholder="you@example.com" required>
           </div>
           <div class="form-group">
             <label>訊息</label>
-            <textarea placeholder="想聊什麼？"></textarea>
+            <textarea name="message" placeholder="想聊什麼？"></textarea>
           </div>
-          <button class="btn-submit">送出</button>
+          <button type="submit" class="btn-submit">送出</button>
+          </form>
         </div>
       </div>
     </div>
@@ -1061,20 +1063,24 @@ footer {
           工業文明的線性模型正在耗盡它的物質基礎。CircleFlow 處理的不只是廢棄物媒合，而是重建「物質秩序」——讓資源的流向、價值與歸屬重新變得可追蹤、可信任、可治理。
         </div>
       </div>
+      <!-- [E] 半導體 tag 移除，改跨域 tags -->
       <div class="project-card sdti">
         <div class="project-icon" style="background:rgba(180,83,9,0.1)">🤝</div>
         <h3>台日產業與技術整合</h3>
         <p>在製造、生醫技術、再生系統與跨境貿易等領域推動台日合作。關注的不只是產業媒合，而是如何在不同制度與文化之間建立長期信任，讓技術與價值在更大的秩序中流動。</p>
         <div class="project-tags">
-          <span class="project-tag">半導體</span>
-          <span class="project-tag">台日合作</span>
-          <span class="project-tag">跨境整合</span>
+          <span class="project-tag">製造</span>
+          <span class="project-tag">生醫</span>
+          <span class="project-tag">再生系統</span>
+          <span class="project-tag">跨境貿易</span>
+          <span class="project-tag">信任結構</span>
         </div>
         <div class="project-strategic">
           <strong>Structural Significance</strong>
           當產業合作跨越國界，問題往往不在技術本身，而在制度、文化與風險認知的差異。這項工作處理的是：如何在不同文明語境中建立信任，讓技術、資源與價值的流動成為長期結構，而非短期機會。
         </div>
       </div>
+      <!-- [C] NT$5 removed, rewritten -->
       <div class="project-card debate">
         <div class="project-icon" style="background:rgba(37,99,235,0.1)">🧠</div>
         <h3>多模型認知協作框架</h3>
@@ -1133,10 +1139,11 @@ footer {
             但我更關心的是：當個體的能力邊界被技術重新劃定，
             人如何保有判斷、創造與承擔責任的能力，而不只是被效率優化成一個節點。
           </p>
+          <!-- [D] SDTI 移除，改台日跨域合作 -->
           <div class="about-timeline">
             <div class="timeline-item">
               <div class="timeline-year">2026</div>
-              <div class="timeline-text"><strong>CircleFlow</strong> 創辦人 · <strong>SDTI</strong> 商業開發</div>
+              <div class="timeline-text"><strong>CircleFlow</strong> 創辦人 · 台日跨域合作與產業橋接</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2020–25</div>
@@ -1292,8 +1299,7 @@ const i18n = {
 'zh-CN': {
   // Nav
   '首頁':'首页','思想':'思想','專案':'项目','關於':'关于','動態':'动态','聯絡我':'联系我',
-  // Hero
-  'Building the Order That Holds':'Building the Order That Holds',
+  // Hero — [G] i18n sync
   '從神學訓練到循環經濟，從創業現場到人工智慧——二十年來，我始終在處理同一個問題：當既有的秩序不再有效，什麼樣的結構值得被重建？':'从神学训练到循环经济，从创业现场到人工智能——二十年来，我始终在处理同一个问题：当既有的秩序不再有效，什么样的结构值得被重建？',
   '技術是手段，不是目的。再生是方法，不是口號。真正的問題永遠是：在系統重組的過程中，人的判斷力、創造力與尊嚴，如何不被效率的邏輯吞噬。':'技术是手段，不是目的。再生是方法，不是口号。真正的问题永远是：在系统重组的过程中，人的判断力、创造力与尊严，如何不被效率的逻辑吞噬。',
   '智能與秩序':'智能与秩序','再生系統':'再生系统','文明與人性':'文明与人性','創造與實踐':'创造与实践','沉思與記錄':'沉思与记录',
@@ -1313,10 +1319,11 @@ const i18n = {
   '系統再生策略、技術架構諮詢、台日跨境產業整合、':'系统再生策略、技术架构咨询、台日跨境产业整合、',
   '內容策略與個體品牌建構':'内容策略与个体品牌建构',
   '送出':'送出','姓名':'姓名','想聊什麼？':'想聊什么？',
+  // Timeline
+  '台日跨域合作與產業橋接':'台日跨域合作与产业桥接',
 },
 'en': {
   '首頁':'Home','思想':'Thinking','專案':'Projects','關於':'About','動態':'Feed','聯絡我':'Contact',
-  'Building the Order That Holds':'Building the Order That Holds',
   '從神學訓練到循環經濟，從創業現場到人工智慧——二十年來，我始終在處理同一個問題：當既有的秩序不再有效，什麼樣的結構值得被重建？':"From theological training to the circular economy, from the startup trenches to artificial intelligence — for twenty years, I've been working on the same question: when existing structures fail, what kind of order is worth rebuilding?",
   '技術是手段，不是目的。再生是方法，不是口號。真正的問題永遠是：在系統重組的過程中，人的判斷力、創造力與尊嚴，如何不被效率的邏輯吞噬。':'Technology is a means, not an end. Regeneration is a method, not a slogan. The real question is always: amid systemic restructuring, how do we preserve human judgment, creativity, and dignity from being consumed by the logic of efficiency?',
   '智能與秩序':'Intelligence & Order','再生系統':'Regenerative Systems','文明與人性':'Civilization & Human Nature','創造與實踐':'Creation & Praxis','沉思與記錄':'Reflections & Chronicles',
@@ -1334,19 +1341,17 @@ const i18n = {
   '內容策略與個體品牌建構':'Content strategy & personal brand infrastructure',
   '送出':'Send','姓名':'Name','想聊什麼？':"What's on your mind?",
   '全部':'All','對話':'Conversation',
-  // About bio
   '十五年的神學訓練讓我習慣追問一個問題：在混亂中，什麼樣的結構能承載意義？':"Fifteen years of theological training instilled a persistent question: amid chaos, what structures can bear meaning?",
   '這個問題帶我離開神學院，走進創業——不是因為放棄了信仰，':"This question led me out of seminary and into entrepreneurship — not because I abandoned faith,",
-  // Projects strategic
   'Structural Significance':'Structural Significance',
   '工業文明的線性模型正在耗盡它的物質基礎。CircleFlow 處理的不只是廢棄物媒合，而是重建「物質秩序」——讓資源的流向、價值與歸屬重新變得可追蹤、可信任、可治理。':"Industrial civilization's linear model is exhausting its material base. CircleFlow addresses not just waste matching, but the reconstruction of material order — making the flow, value, and ownership of resources trackable, trustworthy, and governable.",
   '當產業合作跨越國界，問題往往不在技術本身，而在制度、文化與風險認知的差異。這項工作處理的是：如何在不同文明語境中建立信任，讓技術、資源與價值的流動成為長期結構，而非短期機會。':"When industrial collaboration crosses borders, the challenge is rarely technical — it lies in differences of institutional design, culture, and risk perception. This work addresses how to build trust across civilizational contexts, turning flows of technology, resources, and value into durable structure rather than short-term opportunity.",
   '單一模型的輸出是觀點，多模型的碰撞才接近判斷。這個工具的核心問題不是「哪個 AI 比較聰明」，而是：當個體必須在資訊過載中做出決策，什麼樣的認知結構能提供更可靠的思考支撐？':"A single model's output is opinion; multi-model collision approaches judgment. The core question is not 'which AI is smarter,' but: when individuals must decide amid information overload, what cognitive architecture provides more reliable support for thinking?",
   '當話語權被演算法與平台壟斷，個體的獨立表達需要自己的基礎設施。這不是社群行銷工具，是一個人維持思想輸出獨立性的技術條件。':"When discourse is monopolized by algorithms and platforms, independent individual expression requires its own infrastructure. This is not a social media marketing tool — it is the technical precondition for maintaining intellectual independence.",
+  '台日跨域合作與產業橋接':'Taiwan-Japan cross-domain collaboration & industrial bridging',
 },
 'ja': {
   '首頁':'ホーム','思想':'思想','專案':'プロジェクト','關於':'について','動態':'フィード','聯絡我':'お問合せ',
-  'Building the Order That Holds':'Building the Order That Holds',
   '從神學訓練到循環經濟，從創業現場到人工智慧——二十年來，我始終在處理同一個問題：當既有的秩序不再有效，什麼樣的結構值得被重建？':'神学の訓練から循環型経済へ、創業の現場から人工知能へ——二十年間、私は常に同じ問いに向き合ってきた：既存の秩序が機能しなくなったとき、どのような構造が再建に値するのか。',
   '技術是手段，不是目的。再生是方法，不是口號。真正的問題永遠是：在系統重組的過程中，人的判斷力、創造力與尊嚴，如何不被效率的邏輯吞噬。':'技術は手段であり、目的ではない。再生は方法であり、スローガンではない。真の問いは常に：システムの再編の中で、人間の判断力、創造力、そして尊厳を、効率の論理に呑み込まれないようにするにはどうすればよいか。',
   '智能與秩序':'知能と秩序','再生系統':'再生システム','文明與人性':'文明と人間性','創造與實踐':'創造と実践','沉思與記錄':'省察と記録',
@@ -1357,86 +1362,3 @@ const i18n = {
   '在結構性問題中工作。':'構造的問題に取り組む。',
   '台日產業與技術整合':'台日産業・技術統合',
   '多模型認知協作框架':'マルチモデル認知協調フレームワーク',
-  '跨平台內容基礎設施':'クロスプラットフォーム コンテンツインフラ',
-  '如果你正在思考系統再生、技術架構、台日跨境整合，或者文明尺度的問題——歡迎交流。':'システム再生、技術アーキテクチャ、台日統合、あるいは文明的スケールの問題について考えているなら——ぜひ対話しましょう。',
-  '系統再生策略、技術架構諮詢、台日跨境產業整合、':'再生システム戦略、技術アーキテクチャコンサルティング、台日越境産業統合、',
-  '內容策略與個體品牌建構':'コンテンツ戦略とパーソナルブランド構築',
-  '送出':'送信','姓名':'お名前','想聊什麼？':'お気軽にどうぞ',
-  '全部':'すべて','對話':'対話',
-  'Structural Significance':'構造的意義',
-  '工業文明的線性模型正在耗盡它的物質基礎。CircleFlow 處理的不只是廢棄物媒合，而是重建「物質秩序」——讓資源的流向、價值與歸屬重新變得可追蹤、可信任、可治理。':'工業文明の線形モデルはその物質的基盤を枯渇させつつある。CircleFlowが扱うのは廃棄物マッチングだけではなく「物質秩序」の再構築——資源の流れ、価値、帰属を追跡可能、信頼可能、統治可能にすることである。',
-  '當產業合作跨越國界，問題往往不在技術本身，而在制度、文化與風險認知的差異。這項工作處理的是：如何在不同文明語境中建立信任，讓技術、資源與價值的流動成為長期結構，而非短期機會。':'産業協力が国境を越えるとき、課題は技術そのものではなく、制度・文化・リスク認識の差異にある。この取り組みが扱うのは：異なる文明的文脈においていかに信頼を構築し、技術・資源・価値の流通を短期的機会ではなく長期的構造とするかである。',
-  '單一模型的輸出是觀點，多模型的碰撞才接近判斷。這個工具的核心問題不是「哪個 AI 比較聰明」，而是：當個體必須在資訊過載中做出決策，什麼樣的認知結構能提供更可靠的思考支撐？':'単一モデルの出力は見解に過ぎず、複数モデルの衝突が判断に近づく。このツールの核心的問いは「どのAIがより賢いか」ではなく：情報過多の中で個人が意思決定を迫られるとき、どのような認知構造がより信頼性の高い思考の支えとなるかである。',
-  '当話語權被演算法與平台壟斷，個體的獨立表達需要自己的基礎設施。這不是社群行銷工具，是一個人維持思想輸出獨立性的技術條件。':'言論がアルゴリズムとプラットフォームに独占されるとき、個人の独立した表現には独自のインフラが必要である。これはSNSマーケティングツールではなく、思想的独立性を維持するための技術的前提条件である。',
-}
-};
-
-let currentLang = 'zh-TW';
-let defaultTexts = new Map();
-
-// Capture default zh-TW texts on load
-document.addEventListener('DOMContentLoaded', () => {
-  // Store all text nodes that might need translation
-  captureDefaults();
-});
-
-function captureDefaults() {
-  // We'll do a simpler approach: translate known elements by walking the DOM
-}
-
-function setLang(lang) {
-  currentLang = lang;
-  const h = document.documentElement;
-  if (lang === 'zh-TW') h.setAttribute('lang', 'zh-Hant');
-  else if (lang === 'zh-CN') h.setAttribute('lang', 'zh-Hans');
-  else if (lang === 'ja') h.setAttribute('lang', 'ja');
-  else h.setAttribute('lang', 'en');
-
-  document.body.style.fontFamily = getComputedStyle(document.documentElement).getPropertyValue('--font-body');
-
-  // Update lang buttons
-  document.querySelectorAll('.lang-btn').forEach(b => b.classList.remove('active'));
-  event.target.classList.add('active');
-
-  if (lang === 'zh-TW') {
-    location.reload(); // Simplest way to restore defaults
-    return;
-  }
-
-  const dict = i18n[lang];
-  if (!dict) return;
-
-  // Walk all text-containing elements and translate
-  const walker = document.createTreeWalker(
-    document.body,
-    NodeFilter.SHOW_TEXT,
-    null, false
-  );
-  const textNodes = [];
-  while (walker.nextNode()) textNodes.push(walker.currentNode);
-
-  textNodes.forEach(node => {
-    const text = node.textContent.trim();
-    if (text && dict[text]) {
-      node.textContent = node.textContent.replace(text, dict[text]);
-    }
-  });
-
-  // Also handle innerHTML for elements with mixed content
-  document.querySelectorAll('h1, h2, h3, p, a, span, button, strong').forEach(el => {
-    const t = el.textContent.trim();
-    if (dict[t] && el.children.length === 0) {
-      el.textContent = dict[t];
-    }
-  });
-
-  // Handle placeholders
-  document.querySelectorAll('input[placeholder], textarea[placeholder]').forEach(el => {
-    const p = el.getAttribute('placeholder');
-    if (dict[p]) el.setAttribute('placeholder', dict[p]);
-  });
-}
-</script>
-
-</body>
-</html>
