--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
       <p class="manifesto-quote" data-i18n="manifesto.quote">"Rebuilding <em>Order</em> in an Age of Intelligence"<br>
         — 道成肉身
       </p>
-      <p class="manifesto-body" data-i18n="manifesto.body">神學說，抽象的道（Logos）必須成為肉身（Sarx），才能真正與世界相遇。
+      <p class="manifesto-body" data-i18n="manifesto.body">基督教神學的道（Logos, 基督）必須成為肉身（Sarx,耶穌），才能真正與世界相遇。
         秩序也是如此——停留在概念中的秩序只是論述，唯有進入真實的產業、制度與人際關係，秩序才能被重建。
-        我相信技術必須落地、智能必須入世、創業必須承擔真實的風險與限制。
-        這不是技術樂觀主義，是一個神學訓練出身的創業者，對「道成肉身」最務實的理解——讓秩序在混亂中重新站立，讓人的尊嚴在效率的洪流中被守住。
+        技術必須落地、智能必須入世、創業要能解決人類的痛苦與慾望。
+        無關技術樂觀主義，而是一個神學訓練出身的創業者，對「道成肉身」最務實的理解——讓秩序在混亂中重新站立，讓人的尊嚴在效率的洪流中被守住。
       </p>
       <a href="#" class="manifesto-cta" data-i18n="manifesto.cta" onclick="showPage('blog')">閱讀完整論述 →</a>
     </div>
