Site-wide tone alignment: pillars, projects, about, feed — unified to civilization scale

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-ai)"></span><span data-i18n="hero.pillar.ai">智能與秩序</span></span>
           <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-circular)"></span><span data-i18n="hero.pillar.circular">再生系統</span></span>
           <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-faith)"></span><span data-i18n="hero.pillar.faith">文明與人性</span></span>
-          <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-startup)"></span><span data-i18n="hero.pillar.startup">創造與實踐</span></span>
-          <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-life)"></span><span data-i18n="hero.pillar.life">沉思與記錄</span></span>
+          <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-startup)"></span><span data-i18n="hero.pillar.startup">創造與建構</span></span>
+          <span class="pillar-tag"><span class="pillar-dot" style="background:var(--accent-life)"></span><span data-i18n="hero.pillar.life">沉思與記憶</span></span>
         </div>
         <div class="hero-actions animate-in delay-4">
           <a href="#" class="btn-primary" data-i18n="hero.cta.read" onclick="showPage('blog')">閱讀思想</a>
@@ -141,7 +141,7 @@
       </a>
       <a href="#" class="content-card">
         <div class="content-card-category" style="color:var(--accent-startup)">
-          <span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與實踐
+          <span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構
         </div>
         <h3 data-i18n="blog.card3.title">創業十二年：友情、堅持與未知的旅程</h3>
         <p data-i18n="blog.card3.desc">不是創業的成果讓我們有力量，而是創業精神本身有力量。AppWorks 那些年教會我的事。</p>
@@ -164,7 +164,7 @@
         <div class="project-card circleflow">
           <div class="project-icon" style="background:rgba(5,150,105,0.1)">♻️</div>
           <h3 data-i18n="projects.circleflow.name">CircleFlow</h3>
-          <p data-i18n="projects.circleflow.desc.short">AI 驅動的循環經濟平台，連結廢棄物產生者與資源化業者，用數據優化資源循環效率。</p>
+          <p data-i18n="projects.circleflow.desc.short">循環經濟的數據基礎設施，讓資源的流向、價值與歸屬重新可見、可追蹤、可治理。</p>
           <div class="project-tags">
             <span class="project-tag" data-i18n="projects.tag.circular">再生系統</span>
             <span class="project-tag">AI</span>
@@ -174,10 +174,9 @@
         <div class="project-card debate">
           <div class="project-icon" style="background:rgba(37,99,235,0.1)">🧠</div>
           <h3 data-i18n="projects.debate.name">多模型認知協作框架</h3>
-          <p data-i18n="projects.debate.desc.short">讓多個語言模型對同一議題進行結構化辯論與交叉驗證，以事實查核建立更可靠的判斷支撐。單一模型給觀點，多模型碰撞才接近判斷。</p>
+          <p data-i18n="projects.debate.desc.short">當個體必須在資訊過載中做出判斷，什麼樣的認知結構能提供更可靠的思考支撐。</p>
           <div class="project-tags">
             <span class="project-tag">Multi-Agent</span>
-            <span class="project-tag">Python</span>
             <span class="project-tag" data-i18n="projects.tag.cognitive">認知基礎設施</span>
           </div>
         </div>
@@ -230,15 +229,15 @@
   <div class="section-container">
     <div class="blog-hero">
       <h1 data-i18n="blog.title">Thinking Out Loud</h1>
-      <p data-i18n="blog.subtitle">智能、再生、文明、創造、沉思 — 在實作中思考，在思考中前進。</p>
+      <p data-i18n="blog.subtitle">智能、再生、文明、創造、記憶 — 在實作中思考，在思考中前進。</p>
     </div>
     <div class="blog-filters">
       <button class="filter-btn active" data-filter="all" data-i18n="filter.all">全部</button>
       <button class="filter-btn" data-filter="ai" data-i18n="filter.ai">智能與秩序</button>
       <button class="filter-btn" data-filter="circular" data-i18n="filter.circular">再生系統</button>
       <button class="filter-btn" data-filter="faith" data-i18n="filter.faith">文明與人性</button>
-      <button class="filter-btn" data-filter="startup" data-i18n="filter.startup">創造與實踐</button>
-      <button class="filter-btn" data-filter="life" data-i18n="filter.life">沉思與記錄</button>
+      <button class="filter-btn" data-filter="startup" data-i18n="filter.startup">創造與建構</button>
+      <button class="filter-btn" data-filter="life" data-i18n="filter.life">沉思與記憶</button>
     </div>
     <div class="content-grid" id="blog-grid">
 
@@ -358,10 +357,10 @@
         </div>
       </a>
 
-      <!-- 創造與實踐 -->
+      <!-- 創造與建構 -->
       <a href="#" class="content-card" data-pillar="startup">
         <div class="content-card-category" style="color:var(--accent-startup)">
-          <span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與實踐
+          <span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構
         </div>
         <h3 data-i18n="blog.page.startup1.title">創業那些年我們做過哪些蠢事</h3>
         <p data-i18n="blog.page.startup1.desc">公司是法人，不把薪資算清楚就無法正確呈現價值。二十年創業真實系列。</p>
@@ -372,7 +371,7 @@
       </a>
       <a href="#" class="content-card" data-pillar="startup">
         <div class="content-card-category" style="color:var(--accent-startup)">
-          <span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與實踐
+          <span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構
         </div>
         <h3 data-i18n="blog.page.startup2.title">投資人為什麼不可以早中期就占大股？</h3>
         <p data-i18n="blog.page.startup2.desc">需要「大股」、「控股」的投資人，本身的心態就不是好的投資人。</p>
@@ -383,7 +382,7 @@
       </a>
       <a href="#" class="content-card" data-pillar="startup">
         <div class="content-card-category" style="color:var(--accent-startup)">
-          <span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與實踐
+          <span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構
         </div>
         <h3 data-i18n="blog.card3.title">創業十二年：友情、堅持與未知的旅程</h3>
         <p data-i18n="blog.page.startup3.desc">不是創業的成果讓我們有力量，而是創業精神本身有力量。</p>
@@ -393,10 +392,10 @@
         </div>
       </a>
 
-      <!-- 沉思與記錄 -->
+      <!-- 沉思與記憶 -->
       <a href="#" class="content-card" data-pillar="life">
         <div class="content-card-category" style="color:var(--accent-life)">
-          <span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記錄
+          <span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記憶
         </div>
         <h3 data-i18n="blog.page.life1.title">法器替母親擋下的重量：那多出來的六年</h3>
         <p data-i18n="blog.page.life1.desc">生命中有些重量，不是用效率可以處理的。</p>
@@ -407,7 +406,7 @@
       </a>
       <a href="#" class="content-card" data-pillar="life">
         <div class="content-card-category" style="color:var(--accent-life)">
-          <span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記錄
+          <span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記憶
         </div>
         <h3 data-i18n="blog.page.life2.title">到知天命之年，才見證台灣與海洋的深厚聯繫</h3>
         <p data-i18n="blog.page.life2.desc">安平的帆船上，才發現自己跟這座島嶼還有太多沒說完的故事。</p>
@@ -457,35 +456,32 @@
         </div>
         <div class="project-strategic">
           <strong>Structural Significance</strong>
-          <span data-i18n="projects.taiwan_japan.significance">當產業合作跨越國界，問題往往不在技術本身，而在制度、文化與風險認知的差異。這項工作處理的是：如何在不同文明語境中建立信任，讓技術、資源與價值的流動成為長期結構，而非短期機會。</span></div>
+          <span data-i18n="projects.taiwan_japan.significance">產業合作跨越國界時，障礙往往不在技術，而在制度、文化與風險認知的差異。這項工作處理的是信任秩序——如何在不同文明語境中建立可持續的合作結構，讓技術與價值的流動成為長期制度，而非短期機會。</span></div>
       </div>
       <!-- [C] NT$5 removed, rewritten -->
       <div class="project-card debate">
         <div class="project-icon" style="background:rgba(37,99,235,0.1)">🧠</div>
         <h3 data-i18n="projects.debate.name">多模型認知協作框架</h3>
-        <p data-i18n="projects.debate.desc">讓不同的語言模型對同一議題進行結構化辯論與交叉驗證，以 Perplexity 進行事實查核。支援對話、雙人與對抗三種認知模式。</p>
+        <p data-i18n="projects.debate.desc">讓多個語言模型對同一議題進行結構化辯論與交叉驗證，建立比單一模型更可靠的認知基礎。</p>
         <div class="project-tags">
           <span class="project-tag">Multi-Agent</span>
-          <span class="project-tag">Python</span>
-          <span class="project-tag">LLM</span>
           <span class="project-tag" data-i18n="projects.tag.cognitive">認知基礎設施</span>
         </div>
         <div class="project-strategic">
           <strong>Structural Significance</strong>
-          <span data-i18n="projects.debate.significance">單一模型的輸出是觀點，多模型的碰撞才接近判斷。這個工具的核心問題不是「哪個 AI 比較聰明」，而是：當個體必須在資訊過載中做出決策，什麼樣的認知結構能提供更可靠的思考支撐？</span></div>
+          <span data-i18n="projects.debate.significance">單一模型的輸出是觀點，多模型的碰撞才接近判斷。這個框架處理的是認知秩序——當資訊的生產速度遠超人類的處理能力，個體如何維持獨立思考與可靠決策的結構條件。</span></div>
       </div>
       <div class="project-card brand">
         <div class="project-icon" style="background:rgba(220,38,38,0.1)">📡</div>
         <h3 data-i18n="projects.brand.name">跨平台內容基礎設施</h3>
-        <p data-i18n="projects.brand.desc">整合排程、生成與分發，讓個體的聲音能以系統化的方式觸及分散在不同平台的受眾。</p>
+        <p data-i18n="projects.brand.desc">當話語權被演算法壟斷，個體的獨立表達需要自己的基礎設施。</p>
         <div class="project-tags">
-          <span class="project-tag">Automation</span>
-          <span class="project-tag">API</span>
+          <span class="project-tag">個體基礎設施</span>
           <span class="project-tag" data-i18n="projects.tag.independence">獨立發聲</span>
         </div>
         <div class="project-strategic">
           <strong>Structural Significance</strong>
-          <span data-i18n="projects.brand.significance">當話語權被演算法與平台壟斷，個體的獨立表達需要自己的基礎設施。這不是社群行銷工具，是一個人維持思想輸出獨立性的技術條件。</span></div>
+          <span data-i18n="projects.brand.significance">話語秩序正在被平台與演算法重新分配。這個基礎設施處理的問題是：一個人如何在不依賴任何單一平台的前提下，維持思想輸出的獨立性與持續性。</span></div>
       </div>
     </div>
   </div>
@@ -504,40 +500,40 @@
             這個問題帶我離開神學院，走進創業——不是因為放棄了信仰，
             而是因為我想在真實世界裡驗證：秩序能不能被重新建造，而不只是被論述。
           </p>
-          <p data-i18n="about.p2">從 AppWorks 的創業生態、厚生市集的食農供應鏈、到半畝塘的永續建築，
-            我花了十多年時間理解一件事：系統的再生不是技術問題，是信任問題。
+          <p data-i18n="about.p2">從創業加速器、食農供應鏈、到永續建築，
+            我花了十多年時間在不同的產業裡處理同一件事：系統的再生不是技術問題，是信任問題。
             誰願意承擔轉型的風險，誰就決定了新秩序的形狀。
           </p>
-          <p data-i18n="about.p3">現在，我在推動台日跨境產業合作，同時建構 CircleFlow 作為循環經濟的數據基礎設施。
-            人工智慧在這個過程中是不可或缺的工具——
-            但我更關心的是：當個體的能力邊界被技術重新劃定，
-            人如何保有判斷、創造與承擔責任的能力，而不只是被效率優化成一個節點。
+          <p data-i18n="about.p3">現在，我的工作橫跨台日產業合作與循環經濟的數據基礎設施。
+            人工智慧在這個過程中不可或缺——
+            但我更關心的始終是：當個體的能力邊界被技術重新劃定，
+            人如何保有判斷、創造與承擔責任的能力。秩序值得被重建，但不是以犧牲尊嚴為代價。
           </p>
           <!-- [D] SDTI 移除，改台日跨域合作 -->
           <div class="about-timeline">
             <div class="timeline-item">
               <div class="timeline-year">2026</div>
-              <div class="timeline-text" data-i18n="about.timeline.2026"><strong>CircleFlow</strong> 創辦人 · 台日跨域合作與產業橋接</div>
+              <div class="timeline-text" data-i18n="about.timeline.2026">循環經濟 · 台日跨域合作 · 秩序重建的實踐</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2020–25</div>
-              <div class="timeline-text" data-i18n="about.timeline.2020"><strong>半畝塘</strong> 副總經理 · 永續建築與再生策略</div>
+              <div class="timeline-text" data-i18n="about.timeline.2020">永續建築與再生策略</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2018–20</div>
-              <div class="timeline-text" data-i18n="about.timeline.2018"><strong>厚生市集</strong> · 永續食農供應鏈</div>
+              <div class="timeline-text" data-i18n="about.timeline.2018">食農供應鏈與信任結構</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2013–18</div>
-              <div class="timeline-text" data-i18n="about.timeline.2013"><strong>AppWorks</strong> 加速器 · Fintech 創業</div>
+              <div class="timeline-text" data-i18n="about.timeline.2013">創業加速器 · 在市場中驗證想法</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">2003</div>
-              <div class="timeline-text" data-i18n="about.timeline.2003">離開神學院，在真實世界驗證秩序的可能</div>
+              <div class="timeline-text" data-i18n="about.timeline.2003">從神學院走入真實世界，驗證秩序能否被重新建造</div>
             </div>
             <div class="timeline-item">
               <div class="timeline-year">15 年</div>
-              <div class="timeline-text" data-i18n="about.timeline.seminary"><strong>中華福音神學院</strong> · 神學訓練</div>
+              <div class="timeline-text" data-i18n="about.timeline.seminary">神學訓練 · 追問秩序與意義的起點</div>
             </div>
           </div>
 
@@ -547,23 +543,23 @@
             <div class="about-pillar-grid">
               <div class="about-pillar-item">
                 <h4><span class="pillar-dot" style="background:var(--accent-ai)"></span> 智能與秩序 Intelligence &amp; Order</h4>
-                <p data-i18n="about.pillar.ai.desc">AGI 路徑、AI × 產業應用、多模型協作、個體能力邊界的重塑</p>
+                <p data-i18n="about.pillar.ai.desc">AI 與產業秩序重構、多模型認知協作、個體能力邊界的重新劃定</p>
               </div>
               <div class="about-pillar-item">
                 <h4><span class="pillar-dot" style="background:var(--accent-circular)"></span> 再生系統 Regenerative Systems</h4>
-                <p data-i18n="about.pillar.circular.desc">循環經濟、碳交易、城市採礦、PCB 金屬回收、ESG 治理</p>
+                <p data-i18n="about.pillar.circular.desc">循環經濟、城市採礦、物質流治理、碳交易與 ESG 制度設計</p>
               </div>
               <div class="about-pillar-item">
                 <h4><span class="pillar-dot" style="background:var(--accent-faith)"></span> 文明與人性 Civilization &amp; Human Nature</h4>
-                <p data-i18n="about.pillar.faith.desc">神學 × 社會治理、哲學批判、倦怠社會、尼布爾、馬庫色</p>
+                <p data-i18n="about.pillar.faith.desc">神學與社會秩序、人性尊嚴的哲學基礎、倦怠社會、技術時代的意義危機</p>
               </div>
               <div class="about-pillar-item">
-                <h4><span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與實踐</h4>
-                <p data-i18n="about.pillar.startup.desc">二十年創業實戰、投資生態批判、台灣創業環境、AppWorks 經驗</p>
+                <h4><span class="pillar-dot" style="background:var(--accent-startup)"></span> 創造與建構 Creation &amp; Enterprise</h4>
+                <p data-i18n="about.pillar.startup.desc">創業作為秩序建造、投資與信任結構、從實踐中提煉方法論</p>
               </div>
               <div class="about-pillar-item" style="grid-column: 1 / -1;">
-                <h4><span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記錄</h4>
-                <p data-i18n="about.pillar.life.desc">閱讀筆記、親子教育、帆船、家族記憶、跨文化探索</p>
+                <h4><span class="pillar-dot" style="background:var(--accent-life)"></span> 沉思與記憶 Reflections &amp; Memory</h4>
+                <p data-i18n="about.pillar.life.desc">閱讀與思想記錄、家族記憶、生命中不可量化的事物</p>
               </div>
             </div>
           </div>
@@ -587,42 +583,42 @@
           <span class="feed-platform" style="color:var(--accent-ai)">𝕏 X</span>
           <span class="feed-date">2026.02.19 14:10</span>
         </div>
-        <p>才完成多 AI 辯論引擎就發現模型有新版，馬上升級 v5.2。GPT-4o → GPT-5.2、Grok-3 → Grok-4、Sonar → Sonar Pro。讓三個 AI 互相質疑同一議題，比只聽一個答案靠譜多了。</p>
+        <p>讓不同的 AI 針對同一個問題互相質疑，看見的角度比只問一個模型多得多。工具會一直更新，但核心問題不變：怎麼在資訊過載中做出更可靠的判斷。</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:#0A66C2">in LinkedIn</span>
           <span class="feed-date">2026.02.19 14:30</span>
         </div>
-        <p>【我的 AI 辯論引擎升級到 v5.2】才剛完成的多 AI 辯論版本，下午就發現有些模型已經有更新版。這就是 2026 年做 AI 工具的節奏。</p>
+        <p>【用多模型碰撞來逼近更好的判斷】單一 AI 給的是觀點，多個 AI 互相質疑才接近判斷。我正在建構的認知協作框架，核心不是追最新模型，而是建立一套可靠的思考支撐結構。</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:var(--accent-faith)">📘 Facebook</span>
           <span class="feed-date">2026.02.19 15:10</span>
         </div>
-        <p>才剛完成的多AI辯論版本（讓三個不同的 AI 針對同一個議題互相辯論），下午就發現有些模型已經有更新版。AI 的價值不在是給我標準答案，而在於幫我看見沒想到的角度。</p>
+        <p>最近在做一個實驗：讓不同的 AI 針對同一個議題互相辯論，再由另一個模型做事實查核。發現 AI 的價值不在給標準答案，而在幫我看見沒想到的角度。重點不是工具多厲害，是人怎麼用工具來強化自己的判斷力。</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:var(--accent-life)">◉ Threads</span>
           <span class="feed-date">2026.02.19 14:20</span>
         </div>
-        <p>才剛完成多 AI 辯論引擎，下午就發現模型有更新版 😅 所以又花了一輪升級到 v5.2。AI 的價值不在給標準答案，在幫你看見沒想到的角度。</p>
+        <p>AI 的價值不在給標準答案，在幫你看見沒想到的角度。讓不同的模型互相質疑同一個問題，比只聽一個回答靠譜多了。</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:#FF4500">🔴 Reddit</span>
           <span class="feed-date">2026.02.19 14:50</span>
         </div>
-        <p>Just finished building my Multi-Model Thinking Engine, and the same afternoon I discovered some models already had newer versions. So v5.1 became v5.2 before it even cooled down.</p>
+        <p>I've been experimenting with having multiple AI models debate the same question and cross-check each other's reasoning. The insight isn't about which model is smartest — it's about building a cognitive structure that produces more reliable thinking than any single source.</p>
       </div>
       <div class="feed-item">
         <div class="feed-header">
           <span class="feed-platform" style="color:#FF0000">▶ YouTube</span>
           <span class="feed-date">2026.02.19 15:00</span>
         </div>
-        <p>【AI 辯論引擎升級 v5.2 — 才剛做完就要更新】剛完成的多 AI 辯論引擎，下午就發現模型有更新版。2026 年做 AI 工具的日常 😅</p>
+        <p>【讓多個 AI 互相辯論，逼近更好的判斷】單一模型給觀點，多模型碰撞才接近判斷。這不是在比哪個 AI 聰明，而是在建構一個人做決策時的認知支撐結構。</p>
       </div>
     </div>
   </div>
